fix: token ID overflow

--- a/javascript/tokenscript-viewer/src/components/viewers/sts-token/sts-viewer.css
+++ b/javascript/tokenscript-viewer/src/components/viewers/sts-token/sts-viewer.css
@@ -99,6 +99,11 @@ sts-viewer:has(> card-popover .open) {
 	letter-spacing: 0.24px;
 }
 
+.token-title, .owner-count {
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 .collection-details h4 {
 	font-size: 14px;
 	margin: 0;
